feat: add style to index.html

--- a/index.html
+++ b/index.html
@@ -2,27 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>CV Revutskaya</title>
+  <style>
+    body {
+      margin: 0 auto;
+      width: 40%;
+    }
+
+    h3 {
+      text-transform: uppercase;
+    }
+  </style>
 </head>
 <body>
   <h1>Kseniya Revutskaya</h1>
   <h2>Front End Developer</h2>
   <hr>
   <h3>Address:</h3>
-  <span>Grodno, Belarus</span>
+  <p>Grodno, Belarus</p>
   <h3>Phone:</h3>
-  <span>+37529 93 77 843 Telegram, Viber, Whatsapp</span>
+  <p>+37529 93 77 843 Telegram, Viber, Whatsapp</p>
   <h3>Email:</h3>
-  <span>revutskaya.ke@gmail.com</span>
+  <p>revutskaya.ke@gmail.com</p>
   <h3>Github:</h3>
   <a href="https://github.com/revuttskaya">https://github.com/revuttskaya</a>
   <h3>Date of Birth:</h3>
-  <date>07-04-1997</date>
+  <p>07-04-1997</p>
   <hr>
   <h3>Profile:</h3>
-  <div>Junior JavaScript Developer with analytical, problem solving and organisational skill, ability to work
+  <p>Junior JavaScript Developer with analytical, problem solving and organisational skill, ability to work
     independently and handle multiple projects, good verbal and written communication skills.
-  </div>
+  </p>
   <h3>Skills:</h3>
   <ul>
     <li>HTML</li>
@@ -48,9 +58,10 @@
     });<br>
     close.onclick = onCloseModalActions;</code>
   <h3>Employment history:</h3>
-  <em>17-07-2017 - current time:</em>
-  <strong>Logistics manager at Tu-Tell Logistic</strong>
-  <ul>Duties:
+  <p><i>17-07-2017 - current time:</i></p>
+  <p><strong>Logistics manager at Tu-Tell Logistic</strong></p>
+  <h4>Duties:</h4>
+  <ul>
     <li>Plan and manage logistics, warehouse, transportation and customer services</li>
     <li>Direct, optimize and coordinate full order cycle</li>
     <li>Liaise and negotiate with suppliers, manufacturers, retailers and consumers</li>
@@ -59,13 +70,13 @@
   </ul>
   <h3>Education:</h3>
   <div>
-    <data><em>01-09-2014 - 15-06-2019</em></data>
+    <p><i>01-09-2014 - 15-06-2019</i></p>
     <p><strong>A Bachelor’s degree in Logistic</strong></p>
     <p>Faculty of Innovative Mechanic Engineering</p>
     <p>Yanka Kupala State University of Grodno</p>
   </div>
   <div>
-    <data><em>01-09-2019 - 28-01-2021</em></data>
+    <p><i>01-09-2019 - 28-01-2021</i></p>
     <p><strong>A Master’s degree in Logistics</strong></p>
     <p>Faculty of Innovative Mechanic Engineering</p>
     <p>Yanka Kupala State University of Grodno</p>
