feat: add avatar to CV

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
       width: 40%;
     }
 
+    img {
+      max-width: 30%;
+    }
+
     h3 {
       text-transform: uppercase;
     }
   </style>
 </head>
 <body>
+  <img src="img/avatar.jpg" alt="Avatar">
   <h1>Kseniya Revutskaya</h1>
   <h2>Front End Developer</h2>
   <hr>
