fix: reorganize contacts to list

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   </header>
   <main>
     <section class="contacts">
-      <h3>Address:</h3>
-      <p>Grodno, Belarus</p>
-      <h3>Phone:</h3>
-      <p>+37529 93 77 843 Telegram, Viber, Whatsapp</p>
-      <h3>Email:</h3>
-      <p>revutskaya.ke@gmail.com</p>
+      <h3>Contacts</h3>
+      <ul>
+        <li>Address: Grodno, Belarus</li>
+        <li>Phone: +37529 93 77 843 Telegram, Viber, Whatsapp</li>
+        <li>Email: revutskaya.ke@gmail.com</li>
+        <li>Github: <a href="https://github.com/revuttskaya">https://github.com/revuttskaya</a></li>
+      </ul>
+
     </section>
 
     <section>
@@ -43,9 +45,6 @@
     </section>
 
     <section>
-      <h3>Github:</h3>
-      <a href="https://github.com/revuttskaya">https://github.com/revuttskaya</a>
-
       <h3>Projects:</h3>
       <a href="https://github.com/revuttskaya/revutskaya-logistics-project">Site of Logistics company «Just-in-time»</a>
       <h3>Code examples:</h3>
