feat: add data in footer

--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
 
   </main>
   <footer>
-
+    <a href="https://github.com/revuttskaya/rsschool-cv">
+      <img src="img/github.jpeg" alt="github">
+    </a>
+    <a href="https://rs.school/">
+      <img src="img/rsschool.png" alt="rs-school">
+    </a>
+    <p>2021</p>
   </footer>
 </body>
 </html>
